--- a/chapter_metdatamodels.tex
+++ b/chapter_metdatamodels.tex
@@ -1,4 +1,4 @@
-\chapter{Rainfall data sources and model integration}
+\chapter{Integration of rainfall radar data with a landscape evolution model}
 \label{chapter_metdata}
 
 %%%%%%%%%%%%%%%%
