--- a/literature.bib
+++ b/literature.bib
@@ -2782,7 +2782,7 @@ year = {2002}
   title={1 km Resolution UK Composite Rainfall Data from the Met Office Nimrod System},
   author={{Met Office}},
   year={2003},
-  url={http://catalogue.ceda.ac.uk/uuid/27dd6ffba67f667a18c62de5c3456350},
+  howpublished={{\url{http://catalogue.ceda.ac.uk/}}},
   publisher={NCAS British Atmospheric Data Centre}
 }
 @article{mphys2012radar,
@@ -4393,3 +4393,266 @@ DOI = {10.5194/hess-2016-530}
   pages={566--569},
   year={1969}
 }
+@article{morgan1978field,
+  title={Field studies of rainsplash erosion},
+  author={Morgan, RPC},
+  journal={Earth Surface Processes},
+  volume={3},
+  number={3},
+  pages={295--299},
+  year={1978},
+  publisher={Wiley Online Library}
+}
+@article{meyer1981rain,
+  title={How rain intensity affects interrill erosion},
+  author={Meyer, LD and others},
+  journal={Trans. ASAE},
+  volume={24},
+  number={6},
+  pages={1472--1475},
+  year={1981}
+}
+@article{park1983rainfall,
+  title={Rainfall characteristics and their relation to splash erosion},
+  author={Park, SW and Mitchell, JK and Bubenzer, GD},
+  journal={Trans. ASAE},
+  volume={26},
+  number={3},
+  pages={795--804},
+  year={1983}
+}
+@article{luk1979effect,
+  title={Effect of soil properties on erosion by wash and splash},
+  author={Luk, SH},
+  journal={Earth Surface Processes},
+  volume={4},
+  number={3},
+  pages={241--255},
+  year={1979},
+  publisher={Wiley Online Library}
+}
+@article{pedersen1995influence,
+  title={Influence of wind speed on rainsplash erosion},
+  author={Pedersen, Henning Schj{\o}rring and Hasholt, Bent},
+  journal={Catena},
+  volume={24},
+  number={1},
+  pages={39--54},
+  year={1995},
+  publisher={Elsevier}
+}
+@article{morgan1998european,
+  title={The European Soil Erosion Model (EUROSEM): a dynamic approach for predicting sediment transport from fields and small catchments},
+  author={Morgan, RPC and Quinton, JN and Smith, RE and Govers, Gerard and Poesen, JWA and Auerswald, K and Chisci, G and Torri, D and Styczen, ME},
+  journal={Earth surface processes and landforms},
+  volume={23},
+  number={6},
+  pages={527--544},
+  year={1998}
+}
+@article{hancock2001use,
+  title={Use of a landscape simulator in the validation of the SIBERIA catchment evolution model: Declining equilibrium landforms},
+  author={Hancock, Greg and Willgoose, Garry},
+  journal={Water resources research},
+  volume={37},
+  number={7},
+  pages={1981--1992},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+@article{meyer1994rainfall,
+  title={Rainfall simulators for soil erosion research},
+  author={Meyer, LD},
+  journal={Soil erosion research methods},
+  volume={3},
+  pages={83--103},
+  year={1994},
+  publisher={Soil and Water Conservation Society (Ankeny), St. Lucie press}
+}
+@inproceedings{meyer1948formulas,
+  title={Formulas for bed-load transport},
+  author={Meyer-Peter, Eugen and M{\"u}ller, R},
+  year={1948},
+  organization={IAHR}
+}
+@article{hay2006one,
+  title={One-way coupling of an atmospheric and a hydrologic model in Colorado},
+  author={Hay, LE and Clark, MP and Pagowski, Mariusz and Leavesley, GH and Gutowski Jr, WJ},
+  journal={Journal of Hydrometeorology},
+  volume={7},
+  number={4},
+  pages={569--589},
+  year={2006}
+}
+@article{younger2008usability,
+  title={The usability of 250 m resolution data from the UK Meteorological Office Unified Model as input data for a hydrological model},
+  author={Younger, Phil M and Gadian, AM and Wang, C-G and Freer, JE and Beven, Keith J},
+  journal={Meteorological Applications},
+  volume={15},
+  number={2},
+  pages={207--217},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+@article{beven2001dynamic,
+  title={A dynamic topmodel},
+  author={Beven, Keith and Freer, Jim},
+  journal={Hydrological processes},
+  volume={15},
+  number={10},
+  pages={1993--2011},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+@article{shah1996amodelling,
+  title={Modelling the effects of spatial variability in rainfall on catchment response. 1. Formulation and calibration of a stochastic rainfall field model},
+  author={Shah, SMS and O'connell, PE and Hosking, JRM},
+  journal={Journal of Hydrology},
+  volume={175},
+  number={1-4},
+  pages={67--88},
+  year={1996},
+  publisher={Elsevier}
+}
+@article{shah1996bmodelling,
+  title={Modelling the effects of spatial variability in rainfall on catchment response. 2. Experiments with distributed and lumped models},
+  author={Shah, SMS and O'connell, PE and Hosking, JRM},
+  journal={Journal of Hydrology},
+  volume={175},
+  number={1-4},
+  pages={89--111},
+  year={1996},
+  publisher={Elsevier}
+}
+@misc{coulthard2017caesarlisflood,
+  author       = {Coulthard, Tom},
+  title        = {CAESAR-Lisflood 1.9b},
+  month        = feb,
+  year         = 2017,
+  doi          = {10.5281/zenodo.321820},
+  url          = {https://doi.org/10.5281/zenodo.321820}
+}
+@article{von2014effects,
+  title={Effects of rainfall spatial variability and intermittency on shallow landslide triggering patterns at a catchment scale},
+  author={{von Ruette}, J and Lehmann, P and Or, D},
+  journal={Water Resources Research},
+  volume={50},
+  number={10},
+  pages={7780--7799},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+@article{vonruette2013rainfall,
+  title={Rainfall-triggered shallow landslides at catchment scale: Threshold mechanics-based modeling for abruptness and localization},
+  author={{von Ruette}, J and Lehmann, P and Or, D},
+  journal={Water Resources Research},
+  volume={49},
+  number={10},
+  pages={6266--6285},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+@article{smith2004linear,
+  title={A linear theory of orographic precipitation},
+  author={Smith, Ronald B and Barstad, Idar},
+  journal={Journal of the Atmospheric Sciences},
+  volume={61},
+  number={12},
+  pages={1377--1391},
+  year={2004}
+}
+@article{brocklehurst2004hypsometry,
+  title={Hypsometry of glaciated landscapes},
+  author={Brocklehurst, Simon H and Whipple, Kelin X},
+  journal={Earth Surface Processes and Landforms},
+  volume={29},
+  number={7},
+  pages={907--926},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+@article{cohen2008methodology,
+  title={A methodology for calculating the spatial distribution of the area-slope equation and the hypsometric integral within a catchment},
+  author={Cohen, Sagy and Willgoose, Garry and Hancock, Greg},
+  journal={Journal of Geophysical Research: Earth Surface},
+  volume={113},
+  number={F3},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+@article{wobus2006tectonics,
+  title={Tectonics from topography: Procedures, promise, and pitfalls},
+  author={Wobus, Cameron and Whipple, Kelin X and Kirby, Eric and Snyder, Noah and Johnson, Joel and Spyropolou, Katerina and Crosby, Benjamin and Sheehan, Daniel},
+  journal={Geological Society of America Special Papers},
+  volume={398},
+  pages={55--74},
+  year={2006},
+  publisher={Geological Society of America}
+}
+@article{hobley2017creative,
+  title={Creative computing with Landlab: an open-source toolkit for building, coupling, and exploring two-dimensional numerical models of Earth-surface dynamics},
+  author={Hobley, Daniel EJ and Adams, Jordan M and Nudurupati, Sai Siddhartha and Hutton, Eric WH and Gasparini, Nicole M and Istanbulluoglu, Erkan and Tucker, Gregory E},
+  journal={Earth Surface Dynamics},
+  volume={5},
+  number={1},
+  pages={21},
+  year={2017},
+  publisher={Copernicus GmbH}
+}
+@article{smith2005field,
+  title={Field studies of the storm event hydrologic response in an urbanizing watershed},
+  author={Smith, James A and Baeck, Mary Lynn and Meierdiercks, Katherine L and Nelson, Peter A and Miller, Andrew J and Holland, Elliot J},
+  journal={Water Resources Research},
+  volume={41},
+  number={10},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+@article{hancock2003effect,
+  title={Effect of catchment aspect ratio on geomorphological descriptors},
+  author={Hancock, Gregory R},
+  journal={Prediction in Geomorphology},
+  pages={217--230},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+@article{lancaster2003you,
+  title={You want me to predict what?},
+  author={Lancaster, Stephen T and Grant, Gordon E},
+  journal={Prediction in geomorphology},
+  pages={41--50},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+@article{mudd2017detection,
+  title={Detection of transience in eroding landscapes},
+  author={Mudd, Simon M},
+  journal={Earth Surface Processes and Landforms},
+  volume={42},
+  number={1},
+  pages={24--41},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+@incollection{chappell1986quasi,
+  title={Quasi-stationary convective events},
+  author={Chappell, Charles F},
+  booktitle={Mesoscale meteorology and forecasting},
+  pages={289--310},
+  year={1986},
+  publisher={Springer}
+}
+@inproceedings{hannaford2004development,
+  title={Development of a strategic data management system for a national hydrological database, the UK national river flow archive},
+  author={Hannaford, JAMIE},
+  booktitle={Proceeding of 6th International Conference on Hydroinformatics, Singapore},
+  pages={21--24},
+  year={2004}
+}
+@misc{NRFA,
+  title = {{National River Flow Archive}},
+  howpublished = {\url{https://nrfa.ceh.ac.uk/}},
+  note = {Accessed: 2016-05-01},
+  year = {2016}
+}
+
