--- a/thesis.tex
+++ b/thesis.tex
@@ -9,11 +9,12 @@
 \documentclass[12pt,oneside,PhD]{muthesis}
 
 % Use this command to output a single chapter
-%\includeonly{chapter_events,chapter_geomorph}
+%\includeonly{chapter_events}
 %\includeonly{chapter_floodinundation}
 %\includeonly{chapter_metdatamodels}
 %\includeonly{conclusions}
-%\includeonly{chapter_metdatamodels}
+\includeonly{chapter_LEMs}
+
 
 
 \usepackage{rotating}
@@ -28,7 +29,7 @@
 \hypersetup{colorlinks=true,allcolors={blue!50!black}}
 \usepackage{hypcap}
 \usepackage{gensymb}  % degree symbol
-
+\usepackage{subcaption}
 
 %\usepackage[]{hyperref}
 %\hypersetup{
