--- a/chapter_floodinundation.tex
+++ b/chapter_floodinundation.tex
@@ -87,6 +87,7 @@ For Ryedale simulations, it was decided to use an \(m\) value of 0.005, providin
 \end{figure}
 
 \subsection{Catchment hydrographs}
+\label{sec_hydrographs_flood}
 % AMMENDMENTS:
 %Plot hyetograph (rainfall) oerlay on the hydrographs.
 %For Ryedale, plot the measured observation as well from gauge. -done
