--- a/chapter_rainfallLEMs.tex
+++ b/chapter_rainfallLEMs.tex
@@ -5,7 +5,7 @@
 %\begin{chapquote}{Claude Monet \textit{}}
 %``Landscape does not exist in its own right, since its appearance changes at every moment; but the surrounding atmosphere brings it to life'' 
 %\end{chapquote}
-
+\section{Introduction}
 In the context of numerical landscape evolution models, rainfall input is defined as the quantity of water added to a surface cell or node, or to the whole model domain, over given time period. In practise, no landscape evolution or hydrological models represent rainfall in the sense of it falling from the sky and hitting the ground. The model is only `aware' of rainfall input once it is added as quantity to the hydrological component of the model.  While this may seem a somewhat trivial point, the impact of individual rain drops on the land surface is known to be an important contributor to surface erosion. Rain-splash erosion, as it is termed, is a well-studied phenomenon \citep{morgan1978field, meyer1981rain}. The interaction of raindrops with the surface is complex; it depends on the size of raindrop \citep{morgan1998european}, falling velocity \citep{park1983rainfall}, angle of attack \citep{pedersen1995influence}, soil exposure, soil mineralogy, and cohesion of the soil surface \citep{luk1979effect}. All of these factors could affect both erosion on the landscape hillslopes, as well as the route that water takes before it enters rivers, where fluvial erosion can occur. 
 
 In physical analogue models of landscapes, the generation of rainfall implicitly accounts for some of the above factors in rainsplash erosion, such as drop size, because of the physical need to generate a rainfall source from a position above the surface, such as through a fine-meshed sprinkler \citep[e.g.][]{hancock2001use}. Geomorphologists using physical analogue models of landscape evolution attempt a degree of rainfall realism by ensuring the raindrops they generate are reasonably well scaled to the size of their landscape analogue \citep{meyer1994rainfall}. By contrast, numerical models of landscape evolution begin their representation of rainfall input at the surface; effectively ignoring any effects of rainfall travel through the atmosphere or its impact on the surface. Conceptually, rainfall input in numerical models is the amount of water that would be added at the surface from one or more (usually many more!) raindrops, once they have reached the ground. It ignores any effects from the physical collision raindrops make with the ground. This simple conceptual model of rainfall input is used throughout the rest of this chapter when referring to rainfall input in numerical landscape evolution models.
