--- a/introduction.tex
+++ b/introduction.tex
@@ -1,9 +1,9 @@
 \chapter{Introduction}
 \label{chapter_intro}
-
-\begin{chapquote}{Leonardo da Vinci \textit{}}
-``Water is the driving force of all nature...''
-\end{chapquote}
+%
+%\begin{chapquote}{Leonardo da Vinci \textit{}}
+%``Water is the driving force of all nature...''
+%\end{chapquote}
 
 \section{Overview}
 
