--- a/literature.bib
+++ b/literature.bib
@@ -4655,4 +4655,50 @@ DOI = {10.5194/hess-2016-530}
   note = {Accessed: 2016-05-01},
   year = {2016}
 }
-
+@article{martin2004numerical,
+  title={Numerical modelling of landscape evolution: geomorphological perspectives},
+  author={Martin, Yvonne and Church, Michael},
+  journal={Progress in Physical Geography},
+  volume={28},
+  number={3},
+  pages={317--339},
+  year={2004},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+@article{willgoose2011,
+  title={18 Applications of Long-Term Erosion and Landscape Evolution Models},
+  author={Willgoose, GR and Hancock, GR},
+  journal={Handbook of Erosion Modelling},
+  pages={339},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
+@article{van2011modelling,
+  title={Modelling the response of river systems to environmental change: progress, problems and prospects for palaeo-environmental reconstructions},
+  author={{Van De Wiel}, Marco J and Coulthard, Tom J and Macklin, Mark G and Lewin, John},
+  journal={Earth-Science Reviews},
+  volume={104},
+  number={1},
+  pages={167--185},
+  year={2011},
+  publisher={Elsevier}
+}
+@incollection{temme2013quantitative,
+  title={Quantitative modeling of landscape evolution, treatise on geomorphology},
+  author={Temme, AJAM and Schoorl, JM and Claessens, LFG and Veldkamp, A and Shroder, FS},
+  booktitle={Quantitative Modeling of Geomorphology},
+  number={2.13},
+  pages={180--200},
+  year={2013},
+  publisher={Academic Press}
+}
+@article{hancock2002testing,
+  title={Testing of the SIBERIA landscape evolution model using the Tin Camp Creek, Northern Territory, Australia, field catchment},
+  author={Hancock, GR and Willgoose, GR and Evans, KG},
+  journal={Earth Surface Processes and Landforms},
+  volume={27},
+  number={2},
+  pages={125--143},
+  year={2002},
+  publisher={Wiley Online Library}
+}
