--- a/conclusions.tex
+++ b/conclusions.tex
@@ -29,7 +29,7 @@ It was set out to determine whether hydrogeomorphic processes in river catchment
 
 Increasing the resolution of rainfall input data may not be enough to observe sensitivity in smaller catchments, as rainfall features themselves may not exhibit the necessary heterogeneity in structure to benefit from being resolved at finer scale. Rain cells or bands equal to or greater in size than the catchment over which they rain upon, may well be homogeneous enough in spatial extent and rainfall rate that a `uniform' approximation of their rainfall rate is sufficiently precise enough to represent the rainfall rate at all points in the catchment. As seen in the Boscastle catchment simulations, using a detailed rainfall input data source did not notably alter the outcome of the hydrological predictions (Figures \ref{fig_boscastle_2dplan_flood_ensemble_town}, \ref{fig_ryedale_2dplan_flood_ensemble_town}). In the Ryedale catchment simulations, the hydrological predictions were notably different based on the choice of rainfall input data resolution, affecting both the time and magnitude of the resulting flood peak. 
 %
-Talk about size of convective cell features. What is typical storm cell size and heterogeneity (decay from centre?).
+%Talk about size of convective cell features. What is typical storm cell size and heterogeneity (decay from centre?).
 
 \section{Technical advances}
 The numerical simulation work in this project has been made possible by the development of a numerical landscape evolution model suitable for deployment on HPC services (Chapter \ref{chapter_HAIL-CAESAR}). The porting and development of landscape erosion and evolution models for HPC has thus far been under-exploited in the geomorphological modelling community. The development and parallelisation of the HAIL-CAESAR model as part of this thesis is an advancement of existing methods in computational modelling for hydro-geomorphology:
@@ -39,7 +39,7 @@ Firstly, the model's basis as a re-write and redevelopment of an existing model 
 Secondly, in addition to the speed-up in simulations runtimes observed, the ability to now use HPC facilities to conduct geomorphological modelling studies allows large-scale sensitivity studies to be done, with multiple member `ensemble-style' simulations, in a similar fashion to numerical weather prediction ensemble simulations \citep{sivillo1997ensemble,klein2015variability}. In this study, six-member simulations per case study are are used for the main set of experiments (Table \ref{table_ensemble_experiments}), with ten member simulations used for the parameter sensitivity analysis in Chapter \ref{chapter_flood_model_sensitivity} (Table \ref{table-m-sens}). With sufficient compute resources, much larger ensembler simulations would be possible using the HAIL-CAESAR model.
 
 \section{Future work and applications}
-This study has touched upon the potential for using large ensemble-style simulations to assess sensitivity in landscape evolution modelling studies. Since numerical landscape evolution models typically contain a large number of parameters, particularly as they often combine multiple-process sub-models such as erosion, hydrology, hillslope processes, and other surface processes, a thorough exploration of parameter space is beyond the scope of many studies. Current applications of landscape evolution models rarely makes use of multiple-member ensemble simulations, whereas this practice is more commonly found in hydrological modelling \citep{cloke2009ensemble,wong2015sensitivity} and numerical weather prediction \citep{sivillo1997ensemble}, and there is currently an international project (HEPEX) to further the use of ensemble simulations in hydrological predictions.\citep{schaake2007hepex}. Hydro-geomorphic and landscape evolution modelling studies have been later adopters of ensemble simulations, but this thesis as well as other projects \citep[e.g][]{skinner2017lemsi} highlight the timely applicability of ensemble-style simulation for future hydro-geomorphic studies. The HAIL-CAESAR model could be used in this way in future studies to more rigorously assess model sensitivity to user-defined parameters in landscape evolution modelling. The amount of uncertainty present in landscape evolution models is of noted concern \citep{pelletier2015forecasting}, and taking advantage of the increase in computing power in recent decades with the model presented in this thesis would enable a rigorous exploration of model sensitivity to parameter-space, initial model conditions, input data quality, model resolution, and many other sources of potential uncertainty.
+This study has touched upon the potential for using large ensemble-style simulations to assess sensitivity in landscape evolution modelling studies. Since numerical landscape evolution models typically contain a large number of parameters, particularly as they often combine multiple-process sub-models such as erosion, hydrology, hillslope processes, and other surface processes, a thorough exploration of parameter space is beyond the scope of many studies. Current applications of landscape evolution models rarely makes use of multiple-member ensemble simulations, whereas this practice is more commonly found in hydrological modelling \citep{cloke2009ensemble,wong2015sensitivity} and numerical weather prediction \citep{sivillo1997ensemble}, and there is currently an international project (HEPEX) to further the use of ensemble simulations in hydrological predictions \citep{schaake2007hepex}. Hydro-geomorphic and landscape evolution modelling studies have been later adopters of ensemble simulations, but this thesis as well as other projects \citep[e.g.][]{skinner2017lemsi} highlight the timely applicability of ensemble-style simulation for future hydro-geomorphic studies. The HAIL-CAESAR model could be used in this way in future studies to more rigorously assess model sensitivity to user-defined parameters in landscape evolution modelling. The amount of uncertainty present in landscape evolution models is of noted concern \citep{pelletier2015forecasting}, and taking advantage of the increase in computing power in recent decades with the model presented in this thesis would enable a rigorous exploration of model sensitivity to parameter-space, initial model conditions, input data quality, model resolution, and many other sources of potential uncertainty.
 
 Further development of the model would allow it to tackle large catchments at regional to continental scale, or very high resolution studies of smaller river catchments. High resolution topographic data already exists at grid cell spacings 0.2 to 0.5 m, primarily sourced from lidar-dervied topographic data. At this resolution, river channel and other geomorphological features can be resolved in great detail within the model domain. Though the data is readily available now, few modelling studies have yet made use of such high resolution data, partly because of limitations in computational resources and appropriately designed software. Notwithstanding, the HAIL-CAESAR model would require further development to address the scaling issues highlighted in Chapter \ref{chapter_HAIL-CAESAR}, in order to tackle model domains containing millions of grid cells. A new parallelisation strategy would need to be investigated, such as a distributed memory model parallelisation decomposing the model domain among multiple compute nodes. Such work would require a considerable development effort but there are precedents for hydrological models being parallelised in this way before \citep{vivoni2011real}, and many of the techniques could be applied to landscape evolution models.
  
