--- a/thesis.tex
+++ b/thesis.tex
@@ -10,10 +10,11 @@
 
 % Use this command to output a single chapter
 %\includeonly{chapter_events}
-\includeonly{chapter_floodinundation}
+%\includeonly{chapter_geomorph}
+%\includeonly{chapter_floodinundation}
 %\includeonly{chapter_metdatamodels}
 %\includeonly{conclusions}
-%\includeonly{chapter_LEMs}
+\includeonly{chapter_LEMs}
 
 
 
